--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <ul class="nav-ul">
             <li class="nav-li"><a class="nav-a" href="index.html">Главная</a></li>
             <li class="nav-li"><a href="bird.html" class="nav-a">птица</a></li>
-            <li class="nav-li"><a href="cat" class="nav-a"></a>Кошка</li>
-            <li class="nav-li"><a href="turtle" class="nav-a">Черепаха</a></li>
+            <li class="nav-li"><a href="404.html" class="nav-a">Кошка</a></li>
+            <li class="nav-li"><a href="404.html" class="nav-a">Черепаха</a></li>
         </ul>
     </div>
     <div>
